# FasterGuin

./: .gitignore  .gitmodules  LICENSE.md  README.md  setup.cfg
fasterguin/: __init__.py  __main__.py  asset.py  main.py  utils.py
fasterguin/commands/: __init__.py  base.py  copyd.py  copyf.py  enable.py  file.py  folder.py  output.py  pack.py  prefix.py
fasterguin/options/: __init__.py  algorithm.py  base.py  destination.py  dimension.py  mipmap.py  resize.py
fasterguin/profiles/: __init__.py  android.py  base.py  low.py  pc.py
packerguin/: annot.lua  conf.lua  main.lua  mounter.lua
