[metadata]
name = fasterguin
version = 0.1.0
author = Boba Birds Developers
author_email = lumi.hotaru@gmail.com
description = An Ordinary Texture Packer Suitable for LÖVE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MikuAuahDark/FasterGuin
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10
